<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_username_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">
        </EditText>

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_name_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">
        </EditText>

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/register_email_hint"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">
        </EditText>
        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/register_password_hint"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white">
        </EditText>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            ></Button>

    </LinearLayout>

</RelativeLayout>