<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:gravity="center"
    android:background="@drawable/ic_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:gravity="center"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
                >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_welcome"
                android:textColor="#363A43"
                android:textSize="30sp"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/tv_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_current_pts"
                android:textColor="#7A8089"
                android:textSize="16sp"
                android:textStyle="bold">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/main_pick_category">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_slider"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_questions"
                android:textColor="#7A8089"
                android:textSize="16sp"
                android:textStyle="bold">
            </TextView>

            <com.google.android.material.slider.Slider
                android:id="@+id/sNumberQuestions"
                android:contentDescription="Broj pitanja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="10"
                android:valueTo="50"
                android:stepSize="1">

            </com.google.android.material.slider.Slider>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/main_choose_difficulty">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimary"
                android:text="@string/main_go"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                ></Button>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btn_ranks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#ff99cc00"
                    android:text="@string/main_ranking"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    ></Button>

                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#ffffbb33"
                    android:text="@string/main_userprofile"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    ></Button>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
                >

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="#ffff4444"
                android:text="@string/main_logout"
                android:textSize="18sp"
                android:textColor="@android:color/white"
                ></Button>

        </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/main_admob_id">
            </com.google.android.gms.ads.AdView>

    </LinearLayout>

</ScrollView>