<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="25dp"
    android:background="@drawable/ic_bg"
    tools:context=".ui.WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:text="@string/welcome_text">
    </TextView>

    <Button
        android:id="@+id/register_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_register"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        ></Button>

    <Button
        android:id="@+id/login_welcome_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"

        ></Button>

</LinearLayout>